--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,7 +20,9 @@
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-countup": "^6.4.2",
     "react-dom": "^18",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
