--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-countup": "^6.4.2",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
