--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
