--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.288.0",
     "luxon": "^3.4.3",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
@@ -40,6 +46,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.2",
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
