--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.288.0",
     "luxon": "^3.4.3",
@@ -34,6 +35,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-countup": "^6.4.2",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-quill": "^2.0.0",
